Resolve merge conflict